[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/ui_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/ui_button_run.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ui_gold.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/ui_stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/dungeon.gd" type="Script" id=5]
[ext_resource path="res://ui/ui_button_boss.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/ui_overlay.tscn" type="PackedScene" id=7]

[node name="dungeon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="Node" parent="."]

[node name="bgm" type="AudioStreamPlayer" parent="audio"]
autoplay = true

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overlay" parent="." instance=ExtResource( 7 )]

[node name="ui_player" parent="." instance=ExtResource( 1 )]

[node name="sprite" parent="ui_player" index="0"]
frame = 1

[node name="button_run" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0208333
anchor_top = 0.0117188
anchor_right = 0.131944
anchor_bottom = 0.0742188
margin_right = -32.0
margin_bottom = -32.0
rect_scale = Vector2( 2, 2 )

[node name="stats" parent="." instance=ExtResource( 4 )]
anchor_left = 0.208333
anchor_top = 0.0117188
anchor_right = 0.486111
anchor_bottom = 0.0742188

[node name="ui_gold" parent="." instance=ExtResource( 3 )]
anchor_left = 0.564236
anchor_top = 0.0117188
anchor_right = 0.980903
anchor_bottom = 0.0742188
margin_right = -120.0
margin_bottom = -32.0
rect_scale = Vector2( 2, 2 )

[node name="button_boss" parent="." instance=ExtResource( 6 )]
anchor_left = 0.838542
anchor_top = 0.0917969
anchor_right = 0.977431
anchor_bottom = 0.169922
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 2, 2 )
action_mode = 0
[connection signal="pressed" from="ui_player/button_potion" to="." method="update_potion"]
[connection signal="button_up" from="button_run" to="." method="_escape_cancel"]
[connection signal="button_up" from="button_boss" to="." method="call_boss"]

[editable path="ui_player"]
